--- a/Pipfile
+++ b/Pipfile
@@ -33,6 +33,9 @@ sqlparse = "==0.4.4"
 tzdata = "==2023.3"
 uritemplate = "==4.1.1"
 urllib3 = "==1.26.16"
+django-cors-headers = "*"
+django-anymail = "*"
+openai = "*"
 
 [dev-packages]
 
